syntax="proto3";


package second;
option go_package="github.com/rizkiramadhan201987/learn-grpc/protogen/go/bfi/secondservice/second";
// Job application
message Application {
    uint32 application_id = 1 [json_name = "application_id"];
    string application_full_name =2 [json_name = "application_full_name"];
    string phone = 3;
    string email = 4;
}